--- a/Styles/Carossel.css
+++ b/Styles/Carossel.css
@@ -10,7 +10,7 @@
   font-size: 2rem;
   color: #fff;
   font-weight: 500;
-  margin: 3rem auto 2rem auto;
+  margin: 9rem auto 2rem auto;
 }
 .carrosel{
   margin: 0 auto;
@@ -18,8 +18,8 @@
  
 }
 .swiper-container {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .swiper-slide {
