--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -37,35 +37,47 @@ body {
 .background {
   background-image: url("/img/fundo.png");
   object-fit: cover;
+  max-width: 100vw;
+  height: 100vh;
+  
 }
 .main {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 8rem auto 0 auto;
   justify-content: space-between;
   position: relative;
-  max-width: 1400px;
+  max-width: 1300px;
+
+  
 }
 .main article {
-  max-width: 1400px;
+  max-width: 1300px;
   display: flex;
 }
 .textos-main {
   margin: 6rem auto 0 auto;
 }
 .herois {
-  width: 800px;
+  width: 600px;
+  align-self: flex-end;
+  align-content: flex-end;
+  align-items: end;
+  text-align: end;
+  margin-top: 3rem;
 }
 .textos-main p {
   color: #fff;
   font-size: 3rem;
   font-weight: 600;
+  max-width: 40ch;
 }
 .textos-main h3 {
   font-size: 1rem;
   color: #fff;
   font-family: "Inter", sans-serif;
   font-weight: 200;
+  max-width: 40ch;
 }
 .button-main {
   margin: 1rem auto 0 auto;
@@ -76,15 +88,52 @@ body {
   font-size: 16px;
 }
 .video-main {
-  position: absolute;
   border: none;
-  top: 280px;
-  left: 980px;
+  margin: 10rem 0 0 0;
 }
 
-
-
+@media (max-width: 1300px){
+ .herois{
+  width: 500px;
+ }
+ .video-main{
+  display: none;
+ }
+ .background{
+  max-height: 60vh;
+ }
+ .textos-main p {
+ font-size: 3rem;
+ }
+}
+@media (max-width: 1000px){
+  .main{
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .textos-main p{
+    font-size: 2.4rem;
+    text-align: center;
+  }
+  .textos-main h3 {
+    font-size: 0.8rem;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+    }
+  .herois{
+    display: none;
+  }
+  .background{
+    width: 100vw;
+  }
+}
 @media (max-width: 800px) {
+  .textos-main p{
+    font-size: 1.4rem;
+  }
   .second-main {
     flex-direction: column;
     align-items: center;
@@ -107,9 +156,10 @@ body {
 .second-main {
   display: flex;
   margin: 9rem auto;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   max-width: 1400px;
-  
+  flex-wrap: wrap;
 }
 .second-main-img {
   display: flex;
@@ -117,7 +167,7 @@ body {
   gap: 2rem;
 }
 .imgs-main {
-  width: 300px;
+  width: 200px;
   opacity: 0.4;
 }
 .imgs-main:hover {
@@ -125,7 +175,7 @@ body {
 }
 .main-principal {
   z-index: -1;
-  width: 900px;
+  width: 700px;
   margin: 0 auto;
 }
 .second-main div p {
@@ -133,6 +183,7 @@ body {
   font-weight: 600;
   font-size: 2rem;
   color: #fff;
+  max-width: 20ch;
 }
 .second-main div h2 {
   font-size: 10px;
