--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -35,16 +35,18 @@ body {
   
 }
 .background {
-  background-image: url("/img/fundo.png");
+  position: absolute;
   object-fit: cover;
   max-width: 100vw;
   height: 100vh;
-  
+  z-index: -1;
+  top: -10rem;
+  right: -1rem;
 }
 .main {
   display: flex;
   flex-wrap: wrap;
-  margin: 8rem auto 0 auto;
+  margin: 5rem auto 0 auto;
   justify-content: space-between;
   position: relative;
   max-width: 1300px;
